EVALSYS-1255 Put in a fix to expand the default spacing and make it easier to override via custom CSS http://bugs.sakaiproject.org/jira/browse/EVALSYS-1255
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@79267 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/evaluation_base.css
+++ b/tool/src/webapp/content/css/evaluation_base.css
@@ -1716,6 +1716,20 @@ table#user-perms-table td.userPerms > span:nth-child(2n) {
   display: block;
   margin-bottom: 5px;
 }
+/* special styles to fix up matrix spacing - override if you have long scale labels */
+.scale .matrix .matrixRadioItems-2 {
+    min-width: 180px;
+}
+.scale .matrix .matrixRadioItems-3 {
+    min-width: 120px;
+}
+.scale .matrix .matrixRadioItems-4 {
+    min-width: 80px;
+}
+.scale .matrix .matrixRadioItems-5 {
+    min-width: 60px;
+}
+
 .evaluation .item-group {
   position: relative;
   zoom: 1;
